[package]
name = "lifx-more"
version = "0.1.0"
edition = "2018"

[dependencies]
displaydoc = "0.2"
lifx-core = { git = "https://github.com/rosehuds/lifx" }
tokio = { version = "1.7", features = ["net", "macros", "rt", "sync", "time"] }

# really high level stuff
serde = { version = "1.0", optional = true }
ron = { version = "0.6", optional = true }

[features]
effect = ["serde", "ron"]
